--- a/.flowconfig
+++ b/.flowconfig
@@ -14,4 +14,5 @@
 [options]
 all=true
 emoji=true
+module.name_mapper='^~/\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
 # module.name_mapper.extension='less' -> '<PROJECT_ROOT>/less-stub.js'
