--- a/package.json
+++ b/package.json
@@ -46,13 +46,22 @@
         "eslint": "^3.19.0",
         "eslint-config-google": "^0.8.0",
         "eslint-config-prettier": "^2.1.1",
+        "eslint-import-resolver-webpack": "^0.8.1",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-babel": "^4.1.1",
+        "eslint-plugin-eslint-comments": "^1.0.1",
+        "eslint-plugin-filenames": "^1.2.0",
         "eslint-plugin-flowtype": "^2.34.0",
+        "eslint-plugin-flowtype-errors": "^3.3.0",
+        "eslint-plugin-fp": "^2.3.0",
         "eslint-plugin-graphql": "^1.0.0",
+        "eslint-plugin-import": "^2.3.0",
         "eslint-plugin-jsx-a11y": "^5.0.3",
         "eslint-plugin-prettier": "^2.1.1",
+        "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-react": "^7.0.1",
+        "eslint-plugin-security": "^1.3.0",
+        "eslint-plugin-unicorn": "^2.1.1",
         "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.28.0",
         "jest": "^20.0.4",
