--- a/package.json
+++ b/package.json
@@ -63,9 +63,12 @@
         "eslint-plugin-security": "^1.3.0",
         "eslint-plugin-unicorn": "^2.1.1",
         "file-loader": "^0.11.2",
+        "flow-bin": "^0.47.0",
         "html-webpack-plugin": "^2.28.0",
         "jest": "^20.0.4",
         "json-loader": "^0.5.4",
+        "prepack": "^0.2.3",
+        "prerender-spa-plugin": "^2.0.1",
         "prettier": "^1.4.4",
         "pug": "^2.0.0-rc.2",
         "pug-loader": "^2.3.0",
@@ -75,6 +78,7 @@
         "stylelint-processor-styled-components": "^0.1.0",
         "url-loader": "^0.5.8",
         "webpack": "3.0.0-rc.1",
+        "webpack-bundle-analyzer": "^2.8.2",
         "webpack-dev-server": "^2.4.5"
     },
     "dependencies": {
@@ -84,6 +88,7 @@
         "graphql-relay": "^0.5.2",
         "idx": "^1.5.0",
         "moment": "^2.18.1",
+        "offline-plugin": "^4.8.1",
         "prop-types": "^15.5.10",
         "qs": "^6.4.0",
         "ramda": "^0.24.1",
