Temporarily disabled offline plugin, added notifier plugin.

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
         "url-loader": "^0.5.8",
         "webpack": "3.0.0-rc.1",
         "webpack-bundle-analyzer": "^2.8.2",
-        "webpack-dev-server": "^2.4.5"
+        "webpack-dev-server": "^2.4.5",
+        "webpack-notifier": "^1.5.0"
     },
     "dependencies": {
         "babel-polyfill": "^6.23.0",
