Added window titles to scripts, fixed `clean` and `init` scripts, removed `fix` script, `lint` script now fixes ESLint errors, `start` and `build` scripts now running with `--harmony` and `--no-deprecation` flags, `test` script mover to `tests`.

--- a/bin/build
+++ b/bin/build
@@ -1,10 +1,14 @@
 #!/usr/bin/env bash
 
+# Runs webpack
+
 export NODE_ENV='production'
 export PORT=1337
 export PUBLIC_PATH=''
 export HOST='aliceklipper.github.io'
 
-echo -en "\033]0;build\a"
+echo -en "\033]0;RocketBroom » webpack « ${NODE_ENV}\a"
 
-webpack
+export NODE_OPTIONS="--no-deprecation"
+
+node --harmony `which webpack`
