--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "babel-preset-react-optimize": "^1.0.1",
         "babel-preset-stage-0": "^6.24.1",
         "babili-webpack-plugin": "^0.1.1",
+        "chalk": "^1.1.3",
         "compression-webpack-plugin": "^0.4.0",
         "eslint": "^3.19.0",
         "eslint-config-google": "^0.8.0",
@@ -67,9 +68,9 @@
         "html-webpack-plugin": "^2.28.0",
         "jest": "^20.0.4",
         "json-loader": "^0.5.4",
-        "prepack": "^0.2.3",
         "prerender-spa-plugin": "^2.0.1",
         "prettier": "^1.4.4",
+        "progress-bar-webpack-plugin": "^1.9.3",
         "pug": "^2.0.0-rc.2",
         "pug-loader": "^2.3.0",
         "relay-compiler": "^1.0.0",
