--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "babel-preset-react-optimize": "^1.0.1",
         "babel-preset-stage-0": "^6.24.1",
         "babili-webpack-plugin": "^0.1.1",
-        "chalk": "^1.1.3",
         "compression-webpack-plugin": "^0.4.0",
         "eslint": "^3.19.0",
         "eslint-config-google": "^0.8.0",
@@ -65,12 +64,11 @@
         "eslint-plugin-unicorn": "^2.1.1",
         "file-loader": "^0.11.2",
         "flow-bin": "^0.47.0",
+        "flow-typed": "^2.1.2",
         "html-webpack-plugin": "^2.28.0",
         "jest": "^20.0.4",
         "json-loader": "^0.5.4",
-        "prerender-spa-plugin": "^2.0.1",
         "prettier": "^1.4.4",
-        "progress-bar-webpack-plugin": "^1.9.3",
         "pug": "^2.0.0-rc.2",
         "pug-loader": "^2.3.0",
         "relay-compiler": "^1.0.0",
@@ -91,7 +89,6 @@
         "graphql-relay": "^0.5.2",
         "idx": "^1.5.0",
         "moment": "^2.18.1",
-        "offline-plugin": "^4.8.1",
         "prop-types": "^15.5.10",
         "qs": "^6.4.0",
         "ramda": "^0.24.1",
