Added `eslint-plugin-compat` for production builds, added global CSS, production build ESLint config unignored in `.eslintignore`, removed some redundant things from `.eslintrc.js` and `.stylelintrc.js`, prepared to use of `eslint-plugin-styled-components`, simplified `webpack.config.js`.

--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,8 @@
         "idx",
         "ramda",
         "relay",
-        "react-require"
+        "react-require",
+        "styled-components"
     ],
     "env": {
         "production": {
