--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "alice-helpers": "^0.0.1",
         "babel-core": "^6.25.0",
         "babel-eslint": "^7.2.3",
         "babel-jest": "^20.0.3",
@@ -35,6 +34,7 @@
         "babel-plugin-ramda": "^1.2.0",
         "babel-plugin-react-require": "^3.0.0",
         "babel-plugin-relay": "^1.0.1",
+        "babel-plugin-styled-components": "^1.1.4",
         "babel-plugin-trace": "^1.0.0",
         "babel-preset-babili": "^0.1.2",
         "babel-preset-env": "^1.5.2",
@@ -49,6 +49,7 @@
         "eslint-import-resolver-webpack": "^0.8.1",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-babel": "^4.1.1",
+        "eslint-plugin-compat": "^1.0.3",
         "eslint-plugin-eslint-comments": "^1.0.1",
         "eslint-plugin-filenames": "^1.2.0",
         "eslint-plugin-flowtype": "^2.34.0",
@@ -74,7 +75,6 @@
         "relay-compiler": "^1.0.0",
         "stylelint": "^7.11.0",
         "stylelint-config-standard": "^16.0.0",
-        "stylelint-processor-styled-components": "^0.1.0",
         "url-loader": "^0.5.8",
         "webpack": "3.0.0-rc.1",
         "webpack-bundle-analyzer": "^2.8.2",
