Updated `PUBLIC_PATH`, added `DASHBOARD` port, updated `cfc`, removed stylelint from `lint` script, removed Ramda libdefs, added local libdef, components moved from separate directories, added Redux, removed Relay, added `build-number-plugin`, added HSLuv, removed HMR, added `recompose`, `reselect`, `redux-act`, `redux-thunk`, updated `index.pug`, updated TODOs, added `version` module mock, added some components, added CSS constants, updated targets for `babel-preset-env`, added globals for ESLint, disabled some inspections in ESLint, added module aliases.

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,10 @@
         [
             "env",
             {
-                "useBuiltIns": true
+                "useBuiltIns": true,
+                "targets": [
+                    "chrome >= 59"
+                ]
             }
         ],
         "react-optimize",
@@ -16,14 +19,36 @@
         "partial-application",
         "idx",
         "ramda",
-        "relay",
         "react-require",
-        "styled-components"
+        [
+            "styled-components",
+            {
+                "preprocess": true
+            }
+        ]
     ],
     "env": {
         "production": {
+            "presets": [
+                [
+                    "env",
+                    {
+                        "useBuiltIns": true,
+                        "targets": [
+                            "last 2 versions"
+                        ]
+                    }
+                ]
+            ],
             "plugins": [
-                "groundskeeper-willie"
+                [
+                    "groundskeeper-willie",
+                    {
+                        "removeConsole": true,
+                        "removeDebugger": true,
+                        "removePragma": false
+                    }
+                ]
             ]
         }
     }
