--- a/bin/build
+++ b/bin/build
@@ -4,7 +4,7 @@
 
 export NODE_ENV='production'
 export PORT=1337
-export PUBLIC_PATH=''
+export PUBLIC_PATH='/'
 export HOST='aliceklipper.github.io'
 
 webpack
