--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@aliceklipper/build-number-plugin": "^1.0.0",
         "babel-core": "^6.25.0",
         "babel-eslint": "^7.2.3",
         "babel-jest": "^20.0.3",
@@ -33,7 +34,6 @@
         "babel-plugin-partial-application": "^1.5.0",
         "babel-plugin-ramda": "^1.2.0",
         "babel-plugin-react-require": "^3.0.0",
-        "babel-plugin-relay": "^1.0.1",
         "babel-plugin-styled-components": "^1.1.4",
         "babel-plugin-trace": "^1.0.0",
         "babel-preset-babili": "^0.1.2",
@@ -55,7 +55,6 @@
         "eslint-plugin-flowtype": "^2.34.0",
         "eslint-plugin-flowtype-errors": "^3.3.0",
         "eslint-plugin-fp": "^2.3.0",
-        "eslint-plugin-graphql": "^1.0.0",
         "eslint-plugin-import": "^2.3.0",
         "eslint-plugin-jsx-a11y": "^5.0.3",
         "eslint-plugin-prettier": "^2.1.1",
@@ -72,7 +71,6 @@
         "prettier": "^1.4.4",
         "pug": "^2.0.0-rc.2",
         "pug-loader": "^2.3.0",
-        "relay-compiler": "^1.0.0",
         "stylelint": "^7.11.0",
         "stylelint-config-standard": "^16.0.0",
         "url-loader": "^0.5.8",
@@ -83,10 +81,9 @@
         "webpack-notifier": "^1.5.0"
     },
     "dependencies": {
+        "@klippersubs/hsluv": "^1.0.0",
         "babel-polyfill": "^6.23.0",
         "flow-runtime": "^0.12.0",
-        "graphql": "^0.10.1",
-        "graphql-relay": "^0.5.2",
         "idx": "^1.5.0",
         "moment": "^2.18.1",
         "prop-types": "^15.5.10",
@@ -94,9 +91,14 @@
         "ramda": "^0.24.1",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
-        "react-hot-loader": "next",
-        "react-relay": "^1.0.0",
+        "react-redux": "^5.0.5",
         "react-router": "^4.1.1",
+        "react-router-redux": "^4.0.8",
+        "recompose": "^0.23.5",
+        "redux": "^3.7.0",
+        "redux-act": "^1.3.0",
+        "redux-thunk": "^2.2.0",
+        "reselect": "^3.0.1",
         "styled-components": "^2.0.1",
         "xre": "^1.0.5"
     }
