--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "dependencies": {
         "@klippersubs/hsluv": "^1.0.0",
         "babel-polyfill": "^6.23.0",
+        "babili": "^0.1.3",
         "flow-runtime": "^0.12.0",
         "idx": "^1.5.0",
         "moment": "^2.18.1",
