--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "license": "MIT",
     "devDependencies": {
         "@aliceklipper/build-number-plugin": "^1.0.0",
-        "babel-core": "^6.25.0",
+        "babel-core": "^7.0.0-alpha.12",
         "babel-eslint": "^7.2.3",
         "babel-jest": "^20.0.3",
         "babel-loader": "^7.0.0",
@@ -42,6 +42,7 @@
         "babel-preset-react-optimize": "^1.0.1",
         "babel-preset-stage-0": "^6.24.1",
         "babili-webpack-plugin": "^0.1.1",
+        "cache-loader": "^1.0.3",
         "compression-webpack-plugin": "^0.4.0",
         "eslint": "^3.19.0",
         "eslint-config-google": "^0.8.0",
@@ -74,7 +75,7 @@
         "stylelint": "^7.11.0",
         "stylelint-config-standard": "^16.0.0",
         "url-loader": "^0.5.8",
-        "webpack": "3.0.0-rc.1",
+        "webpack": "^3.0.0",
         "webpack-bundle-analyzer": "^2.8.2",
         "webpack-dashboard": "^0.4.0",
         "webpack-dev-server": "^2.4.5",
