Fixed issue with misconfigured styled-components plugin, added initial support for babel-backwards, updated TODOs.

--- a/.babelrc
+++ b/.babelrc
@@ -20,12 +20,7 @@
         "idx",
         "ramda",
         "react-require",
-        [
-            "styled-components",
-            {
-                "preprocess": true
-            }
-        ]
+        "styled-components"
     ],
     "env": {
         "production": {
