--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "babel-eslint": "^7.2.3",
         "babel-jest": "^20.0.3",
         "babel-loader": "^7.0.0",
+        "babel-plugin-5to6-commonjs-to-import": "^0.0.6",
         "babel-plugin-flow-runtime": "^0.11.1",
         "babel-plugin-groundskeeper-willie": "^1.3.2",
         "babel-plugin-idx": "^1.5.1",
