--- a/.flowconfig
+++ b/.flowconfig
@@ -10,10 +10,11 @@
 <PROJECT_ROOT>/coverage/.*
 <PROJECT_ROOT>/cache/.*
 
-[libs]
-
 [options]
-module.name_mapper='^~/\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
-module.name_mapper='^types/\(.*\)$' -> '<PROJECT_ROOT>/src/types/\1'
-module.name_mapper='^cc$' -> '<PROJECT_ROOT>/src/const/cc.js'
-module.name_mapper='^version$' -> '<PROJECT_ROOT>/version.mock.js'
+module.name_mapper='^~/\(.*\)$'          -> '<PROJECT_ROOT>/src/\1'
+module.name_mapper='^types/\(.*\)$'      -> '<PROJECT_ROOT>/src/types/\1'
+module.name_mapper='^components/\(.*\)$' -> '<PROJECT_ROOT>/src/components/\1'
+module.name_mapper='^containers/\(.*\)$  -> '<PROJECT_ROOT>/src/contsiners/\1'
+module.name_mapper='^const/\(.*\)$'      -> '<PROJECT_ROOT>/src/const/\1'
+module.name_mapper='^api/\(.*\)$'        -> '<PROJECT_ROOT>/src/api/\1'
+module.name_mapper='^version$'           -> '<PROJECT_ROOT>/version.mock.js'
