--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@aliceklipper/build-number-plugin": "^1.0.0",
         "babel-eslint": "^7.2.3",
         "babel-jest": "^20.0.3",
-        "babel-loader": "^7.0.0",
+        "babel-loader": "^7.1.1",
         "babel-plugin-flow-runtime": "^0.11.1",
         "babel-plugin-groundskeeper-willie": "^1.3.2",
         "babel-plugin-idx": "^1.5.1",
@@ -77,7 +77,7 @@
         "webpack": "^3.0.0",
         "webpack-bundle-analyzer": "^2.8.2",
         "webpack-dashboard": "^0.4.0",
-        "webpack-dev-server": "^2.4.5",
+        "webpack-dev-server": "^2.5.0",
         "webpack-notifier": "^1.5.0"
     },
     "dependencies": {
@@ -90,8 +90,8 @@
         "prop-types": "^15.5.10",
         "qs": "^6.4.0",
         "ramda": "^0.24.1",
-        "react": "^15.5.4",
-        "react-dom": "^15.5.4",
+        "react": "^16.0.0-alpha.13",
+        "react-dom": "^16.0.0-alpha.13",
         "react-redux": "^5.0.5",
         "react-router": "^4.1.1",
         "react-router-redux": "^4.0.8",
